# hellowebserver

./: .gitignore  Dockerfile  README.md  docker_report.txt  run_benchmarks.sh  run_docker_benchmarks.sh
.metals/: metals.lock.db
C_sharp/: .dockerignore  Dockerfile
C_sharp/helloworld/: Program.cs
C_sharp/helloworld/Data/: WeatherForecast.cs  WeatherForecastService.cs
C_sharp/helloworld/Pages/: Error.cshtml.cs  (+3 more)
JS_react/: Dockerfile
JS_react/helloworld/: package-lock.json  package.json
JS_svelte/: Dockerfile
PHP/: Dockerfile
c_facil/: .dockerignore  Dockerfile
c_facil/helloworld/: makefile
clojure/: Dockerfile
clojure/helloworld/: CHANGELOG.md  README.md  project.clj
cpp_crow/: Dockerfile  helloworld.cpp
elixir_bandit/: .dockerignore  Dockerfile
elixir_bandit/helloworld/: mix.exs
elixir_phoenix/: Dockerfile
elixir_phoenix/helloworld/: mix.exs
golang/: Dockerfile  main.go
haskell/: .dockerignore  Dockerfile  helloworld.cabal
haskell/helloworld/: Main.hs
java_quarkus/: Dockerfile
java_quarkus/helloworld/: README.md
java_spring/: Dockerfile
julia/: Dockerfile  helloworld.jl
nim/: Dockerfile  helloworld.nim
ocaml/: Dockerfile
ocaml/helloworld/: dune-project  helloworld.opam
prolog/: Dockerfile  helloworld.pl
python_django/: Dockerfile
python_fastapi/: .dockerignore  Dockerfile
python_flask/: Dockerfile
python_flask/helloworld/: main.py
racket/: Dockerfile
racket/helloworld/: README.md
ruby/: Dockerfile
rust/: Dockerfile
rust/helloworld/: Cargo.toml
scala/: Dockerfile
scala/helloworld/: build.sbt
(+35 files in other folders)
